Fix issues with tooltips and deck builder on mobile

--- a/client/src/components/status-effects/status-effect-tooltip.module.scss
+++ b/client/src/components/status-effects/status-effect-tooltip.module.scss
@@ -39,3 +39,14 @@
 .counter {
 	font-family: MinecraftBold;
 }
+
+@media (max-width: 720px) {
+	.topLine {
+		gap: 8px;
+		font-size: 16px;
+	}
+
+	.description {
+		font-size: 16px;
+	}
+}
