--- a/client/src/components/tooltip/tooltip.module.scss
+++ b/client/src/components/tooltip/tooltip.module.scss
@@ -20,18 +20,16 @@
 }
 
 .tooltipContainer {
-	width: 100%;
-	height: 100%;
+	width: 0px;
+	height: 0px;
 }
 
 .tooltipBox {
 	position: absolute;
 }
 
-@media screen and (max-width: 720px) {
-	.tooltip {
-		overflow: hidden;
-	}
+.tooltip {
+	overflow: hidden;
 }
 
 .smallTooltip {
